--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,13 +30,14 @@ jobs:
           sudo apt install -y pandoc texlive texlive-latex-extra texlive-xetex
   
       - name: Convert README.md to PDF
-        run: pandoc --from markdown --to pdf README.md -o README.pdf
+        run: pandoc --from markdown --to pdf README.md -o README.pdf --template=template.tex
   
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: README.pdf
           path: README.pdf
+
 
 
 
